--- a/Projeto-LP2-dev/Examples/Header/header.css
+++ b/Projeto-LP2-dev/Examples/Header/header.css
@@ -3,32 +3,17 @@
 	margin: 0px;
 }
 
-body {
-	background-color: white;
-	background-image: linear-gradient(90deg,#00c4cc,#7d1ae8);
-}
-
-#body {
-	height: 100%;
-	width: 100%;
-	filter: blur(20px);
-	border: 3px solid red;
-}
-
-
 #content-topo {
 	max-width: 1024px;
-	height: 70px;
 	margin: 0 auto;
-	border: 1px solid blue;
-	margin-top: 8px;
+	/*border: 1px solid blue;*/
+	margin-top: 18px;
 }
 
 header {
 	border: 1px solid black;
 	text-align: center;
-	height: 90px;
-	background-image: linear-gradient(90deg,#00c4cc,#7d1ae8);
+	height: 70px;
 }
 
 li {
@@ -38,21 +23,19 @@ li {
 
 a {
 	text-decoration: none;
-	color: white;
 }
 
-.logo {
-	max-width: 70px;
-	position: relative;
-	border: 1px solid black;
+a.logo {
+	/*border: 1px solid red;*/
+	font-size: 30px;
 }
 
 .left-menu {
 	float: left;
-	border: 1px solid red;
+	/*border: 1px solid red;*/
 	margin-left: 160px;
 	font-size: 20px;
-	margin-top: 22px;
+	margin-top: 4px;
 }
 
 .left-menu li{
@@ -61,7 +44,7 @@ a {
 
 .right-menu {
 	float: right;
-	border: 1px solid red;
+	/*border: 1px solid red;*/
 	margin-right: 160px;
 	font-size: 20px;
 	margin-top: 4px;
