--- a/IFN/_css/commons/common.css
+++ b/IFN/_css/commons/common.css
@@ -7,3 +7,33 @@
 	font-family: 'Lato', sans-serif;
 	/*font-family: 'Roboto', sans-serif;*/
 }
+
+.button {
+	background-color: #3C74A6;
+	border-radius: 5%;
+	border: none;
+  	color: white;
+  	text-align: center;
+  	cursor: pointer;
+  	-webkit-box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.75);
+	-moz-box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.75);
+	box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.75);
+}
+
+.button:hover {
+	background-color: #1E3859;	
+}
+
+input[type=email], input[type=password] {
+  height: 22px;
+  width: 100%;
+  border-radius: 3px;
+  border: 1px solid transparent;
+  border-top: none;
+  border-bottom: 1px solid #DDD;
+  box-shadow: inset 0 1px 2px rgba(0,0,0,.39), 0 -1px 1px #FFF, 0 1px 0 #FFF;
+}
+
+input[type=checkbox] {
+	transform: scale(1.1);
+}
