--- a/IFN/_css/individuals/esportes.css
+++ b/IFN/_css/individuals/esportes.css
@@ -1,19 +1,27 @@
-body{
-	margin-left: 200px;
-	margin-right: 200px;
+#content {
+	margin: 0 auto;
+	display: flex;
+	justify-content: center;
+	/*border: 1px solid red;*/
+}
+
+.clear {
+	clear: both;
 }
 
 section#corpo {
-	width: 500px;
+	position: relative;
+	width: 600px;
 	display: block;
-	float: left;
-	border-right: 1px solid black;
+	/*border-right: 1px solid black;*/
 }
 
 iframe#frame-sports {
+	position: relative;
+	right: 0;
 	border: none;
 	overflow: auto;
-	height: 300px;
+	height: 100%;
 }
 
 .div-noticia {
@@ -24,15 +32,21 @@ iframe#frame-sports {
 	justify-content: center;
 	overflow: hidden;
 	border-radius: 3%;
+	margin-bottom: 20px;
+	-webkit-box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.75);
+	-moz-box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.75);
+	box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.75);
+	width: 500px;
+	height: 300px;
 }
 
 .div-noticia img{
-	transform: scale(0.4);
+	transform: scale(0.8);
 	transition: .4s;
 }
 
 .div-noticia:hover img{
-	transform: scale(0.45);
+	transform: scale(0.75);
 	
 }
 
@@ -43,11 +57,5 @@ iframe#frame-sports {
 	bottom: 10px;
 	margin: 10px;
 	text-shadow: 1px 1px black;
-	}
-
-.div-noticia {
-	width: 500px;
-	height: 400px;
-	/*border: 1px solid black*/
 }
 
