--- a/IFN/_css/commons/common.css
+++ b/IFN/_css/commons/common.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Lato|Roboto');
+@import url('https://use.fontawesome.com/releases/v5.0.13/css/all.css');
 
 *, body {
 	padding: 0;
