--- a/IFN/_css/commons/common.css
+++ b/IFN/_css/commons/common.css
@@ -2,6 +2,7 @@
 @import url('https://use.fontawesome.com/releases/v5.0.13/css/all.css');
 
 *, body {
+	/*background-color: #EFEFEF;*/
 	padding: 0;
 	margin: 0;
 	/*opcoes de fonte*/
