--- a/IFN/_css/individuals/times.css
+++ b/IFN/_css/individuals/times.css
@@ -1,18 +1,16 @@
 #tabclas {
 	text-align: center;
 	padding: 50px;
-	background-color: #efefef;
+	background-color: #e8e8e8;
 	border-collapse: collapse;
 	color: #1E3859;
 	width: 100%;
 }
 
-
-
 #title {
 	text-shadow: 0px 1px 2px rgba(150, 150, 150, 1);
 	text-align: center;
-	background-color: #efefef;
+	background-color: #e8e8e8;
 	font-weight: bold;
 	font-size: 18pt;
 	padding: 20px;
