--- a/IFN/_css/individuals/login.css
+++ b/IFN/_css/individuals/login.css
@@ -8,7 +8,7 @@ body {
 	width: 100%;
 	height: calc(100% - 70px);
 	align-items: center;
-	border: 1px solid red;
+	/*border: 1px solid red;*/
 	display: flex;
 	justify-content: center;
 
