--- a/IFN/_css/commons/common.css
+++ b/IFN/_css/commons/common.css
@@ -26,7 +26,7 @@
 	background-color: #1E3859;	
 }
 
-input[type=email], input[type=password] {
+input[type=email], input[type=password], input[type=text], textarea {
   height: 22px;
   width: 100%;
   border-radius: 3px;
